# ChromatinHD

./: .gitignore  .pre-commit-config.yaml  404.html  CNAME  LICENSE.md  README.md  chromatinhd.code-workspace  index.html  index.py  mkdocs.yml  objects.inv  overview.fdb_latexmk  overview.fls  pyproject.toml  setup.md  setup.py  sitemap.xml  test.py
.github/workflows/: ci.yml
benchmark/: index.html
benchmark/diff/: models.py  simulated.py  timing.py
benchmark/diff/1-model/: index.html
benchmark/diff/models/: index.html
benchmark/diff/simulated/: index.html
benchmark/diff/timing/: index.html
code/: peakcounter.py
code/1-preprocessing/: 1-preprocess.py  1-preprocess_morf.py
code/1-preprocessing/motifs/: 1-motif_scanning.py
code/1-preprocessing/peaks/: count.py  peak_calling.py  peak_calling_celltype.py  peak_counting-Copy1.py  peak_counting.py  run_edger.R
code/2-positional/: 1-model2.py  2-interpret.py  2-model.py  2-run.py  3-interpret.py  3-interpret_models.py  3-interpret_test.py  TODO_2-interpret.py  design.py
code/2-positional/old/: 2-model-motif-Copy2.py
code/2-positional/peaks/: compare.py  peak_calling.py  peak_counting.py
code/3-sequence/: 1-motif_scanning.py  2-model-motif.py  2-model.py  2-run.py  3-interpret.py  3-interpret_models.py  3-interpret_models_test.py  design.py
code/3-sequence/3b/: 2-model.py  2-run.py  3-interpret_models.py  design.py
code/4-vae/: distributions.py  simulate.py
code/__old/: peakcounter.py
code/__old/pbmc10k/: 2-model.py
code/e18brain/: preprocess.py
code/e18brain/pbmc10k/: preprocess.py
code/lymphoma/: 1-preprocess.py  2-model.py  3-explore_model.py  3-explore_model_op.py
code/lymphoma/old/: 99-create_peaks.py
code/old/pbmc10k/: 1-preprocess.py  2-create_peaks.py  preprocess.py
code/pbmc10k/: 1-preprocess.py  2-create_peaks.py  investigate.py
code/pbmc10k2/: 1-preprocess.py  2-model.py
code/promoter/: 1-preprocess.py  2-model-motif.py  2-model.py  2-run.py  3-explore_model.py  3-explore_model_op.py  HOCOMOCOv11_core_pwms_HUMAN_mono.txt  restats
code/promoter/old/: 2-model-motif-Copy1.py
code/promoter/peaks/: compare.py  peak_calling.py  peak_counting.py
docs/: description.md  models.dio  quickstart.md  resources.md
docs/override/: main.html
docs/quickstart/: 0_quickstart.py
docs/reference/: data.md
docs/source/: .pages  CNAME  index.md  jupytext.toml
docs/source/benchmark/: index.md
docs/source/javascripts/: reference.js
docs/source/quickstart/: 0_install.py  0_quickstart.py  1_data.py  2_pred.py  3_diff.py  anim.gif.REMOVED.git-id  quickstart_cli.md
docs/source/reference/: .pages  data.md
docs/source/static/: favicon.ai  logo.ai
docs/source/stylesheets/: extra-reference.css  extra.css
docs/static/: favicon.ai
docs/stylesheets/: extra.css
docs/tex/: overview.tex
javascripts/: reference.js
package/: README.md  setup.py
package/src/peakfreeatac/: __init__.py  accessibility.py  embedding.py  flow.py  fragments.py  grid.py  loss.py  optim.py  peakcounts.py  plotting.py  prediction.py  scorer.py  sparse.py  train.py  transcriptome.py  utils.py
package/tests/: test_loss.py
package/tests/genome/: test_motifs.py
quickstart/: 0_install.py  1_data.py  2_diff.py  2_pred.py  3_diff.py  3_pred.py  restats  test.netcdf
quickstart/0_install/: index.html
quickstart/1_data/: index.html
quickstart/2_pred/: index.html
quickstart/3_diff/: index.html
quickstart/3_pred/: index.html
quickstart/example/: fragments.tsv.REMOVED.git-id  fragments.tsv.gz.tbi  transcriptome.h5ad
quickstart/example/clustering/: cluster_info.pkl  labels.pkl  var.pkl
quickstart/example/fragments/: cellxgene_indptr.pkl  coordinates.pkl  mapping.pkl  obs.tsv  var.tsv
quickstart/example/motifs/: annot.txt  annotation.jsonl.REMOVED.git-id  pwm_cutoffs.txt  thresholds.tar.gz.REMOVED.git-id
quickstart/example/motifscan/: coordinates.dat.REMOVED.git-id  indices.dat.REMOVED.git-id  indices.pkl  indptr.pkl  motifs.pkl  (+4 more)
reference/: index.html
reference/data/: index.html
scripts/: build.sh  cythonize.sh  dist.sh  docs.sh  install.sh  setup_data_tiny.py  test.py
search/: search_index.json
src/chromatinhd/: __init__.py  _version.py  conservation.py  device.py  embedding.py  flow.py  grid.py  optim.py  peakcounts.py  plotting.py  prediction.py  scorer.py  slicetypes.py  sparse.py  train.py  utils.py
stylesheets/: extra-reference.css  extra.css
tests/: conftest.py  test_loss.py  test_sparse.py
tests/biomart/: conftest.py  test_tss.py  tss_test.py
tests/differential/: test_differential.py
tests/loaders/: test_fragment_helpers.py  test_fragments.py  test_transcriptome_fragments.py
tests/utils/: test_interleave.py
tutorials/: index.html
(+1156 files in other folders)
